[gd_scene load_steps=2 format=2]

[ext_resource path="res://scene/rpc_example/Node.gd" type="Script" id=1]

[node name="Control" type="Control"]
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button1" type="Button" parent="."]
margin_right = 12.0
margin_bottom = 20.0
text = "Button 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="."]
margin_top = 20.0
margin_right = 67.0
margin_bottom = 40.0
text = "Button 2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button3" type="Button" parent="."]
margin_top = 40.0
margin_right = 67.0
margin_bottom = 60.0
text = "Button 3"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Button1" to="." method="_on_Button1_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
